proof of sign up

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,4 +12,9 @@ jobs:
       - run: npm install -g typescript
       - run: npm install -g ts-node
 
+      - uses: actions/download-artifact@v3
+        with:
+          name: proof
+          path: screenshot.jpeg
+
       - run: ts-node main.ts
